# bsdl

./: .gitignore  .projectile  CMakeLists.txt  README.md
lib/: README.md
lib/curlcpp/: create_dylib  libcurlcpp.dylib
lib/gumbo-parser/: create_dylib  libgumbo.dylib  libgumbo.so.1
lib/gumbo-query/: create_dylib  libgq.dylib
lib/gumbo-query/src/: CMakeLists.txt  Document.cpp  Document.h  Node.cpp  Node.h  Object.cpp  Parser.cpp  Parser.h  QueryUtil.cpp  QueryUtil.h  Selection.cpp  Selection.h  Selection.h.orig  Selector.cpp  Selector.h
res_macos/bsdl.app/Contents/: Info.plist
res_macos/bsdl.app/Contents/Resources/: applet.rsrc
res_macos/bsdl.app/Contents/Resources/Scripts/: main.scpt
res_win32/: bsdl.rc  make_res.bat
src/: app.cpp  app.hpp  batch_app.cpp  batch_app.hpp  curses_app.cpp  curses_app.hpp  json_app.cpp  json_app.hpp  main.cpp  main_app.cpp  main_app.hpp  monitor_app.cpp  monitor_app.hpp  option.cpp  option.hpp  settings.cpp  settings.hpp
src/aggregators/: aggregator.cpp  aggregator.hpp  download_selection.hpp  download_selector.cpp  download_selector.hpp  episode.cpp  episode.hpp  episode_download.cpp  episode_download.hpp  episode_file.cpp  episode_file.hpp  exception.hpp  season.cpp  season.hpp  season_transform.hpp  season_view.cpp  season_view.hpp  series.cpp  series.hpp  subtitle.cpp  subtitle.hpp  video_file.hpp
src/aggregators/bs/: bs.cpp  bs.hpp  captcha_solver.hpp  download_selection.hpp  download_selector.hpp  episode.cpp  episode.hpp  episode_download.cpp  episode_download.hpp  episode_file.cpp  episode_file.hpp  exception.hpp  merge_transform.cpp  merge_transform.hpp  season.cpp  season.hpp  season_view.cpp  season_view.hpp  series.cpp  series.hpp  video_file.cpp  video_file.hpp
src/aggregators/kx/: episode.cpp  episode.hpp  episode_file.cpp  episode_file.hpp  exception.hpp  kx.cpp  kx.hpp  merge_with_bs.cpp  merge_with_bs.hpp  movie_episode.cpp  movie_episode.hpp  movie_season.cpp  movie_season.hpp  season.cpp  season.hpp  series.cpp  series.hpp  video_file.cpp  video_file.hpp
src/aggregators/mk/: episode.cpp  episode.hpp  episode_file.cpp  episode_file.hpp  exception.hpp  merge_with_bs.cpp  merge_with_bs.hpp  mk.cpp  mk.hpp  movie_episode.cpp  movie_episode.hpp  movie_season.cpp  movie_season.hpp  season.cpp  season.hpp  series.cpp  series.hpp  video_file.cpp  video_file.hpp
src/aggregators/pr/: captcha_solver.hpp  episode.cpp  episode.hpp  episode_file.cpp  episode_file.hpp  exception.hpp  pr.cpp  pr.hpp  season.cpp  season.hpp  series.cpp  series.hpp  video_file.cpp  video_file.hpp
src/app/: app.cpp  app.hpp  download_dialog.hpp  platform.hpp  provider.cpp  provider.hpp  provider_s.hpp  provider_v.hpp  settings.cpp  settings.hpp
src/apps/: batch_app.cpp  batch_app.hpp  curses_app.cpp  curses_app.hpp  json_app.cpp  json_app.hpp  main_app.cpp  main_app.hpp  monitor_app.cpp  monitor_app.hpp  notifier_app.cpp  notifier_app.hpp  plain_app.cpp  plain_app.hpp
src/bs/: bs.cpp  bs.hpp  download_selection.cpp  download_selection.hpp  download_selector.cpp  download_selector.hpp  episode.cpp  episode.hpp  episode_download.cpp  episode_download.hpp  episode_file.cpp  episode_file.hpp  exception.hpp  season.cpp  season.hpp  season_view.cpp  season_view.hpp  series.cpp  series.hpp  video_file.cpp  video_file.hpp
src/curses/: button.hpp  button_group.hpp  color.cpp  color.hpp  exception.hpp  input.cpp  input.hpp  input_dialog.hpp  menu.hpp  menu_base.hpp  menu_dialog.hpp  menu_horizontal.hpp  menu_vertical.hpp  message_dialog.hpp  platform.hpp  point.hpp  progress_bar.hpp  rectangle.hpp  spinner.hpp  stream.cpp  stream.hpp  stream_modifier.cpp  stream_modifier.hpp  terminal.cpp  terminal.hpp  text_box.hpp  widgets.hpp  window.cpp  window.hpp  window_framed.hpp  window_paneled.hpp  window_plain.hpp  window_sub.hpp
src/http/: client.cpp  client.hpp  download_queue.hpp  exception.hpp  fields.cpp  fields.hpp  headers.cpp  headers.hpp  multi_request.hpp  request.cpp  request.hpp  request_chain.cpp  request_chain.hpp  request_implementation.cpp  request_implementation.hpp  response.cpp  response.hpp
src/providers/: provider.cpp  provider.hpp  provider_s.hpp  provider_v.hpp  provider_youtube_dl.hpp
src/test/: fixtures.hpp  mock_app.cpp  mock_app.hpp  mock_terminal.cpp  provider.cpp  settings.cpp  test_util.cpp  test_util.hpp
src/test/aggregators/: aggregator.cpp  download_selection.cpp  episode.cpp  episode_download.cpp  episode_file.cpp  season.cpp  series.cpp  subtitle.cpp  test_util.hpp  video_file.cpp
src/test/http/: download_queue.cpp  download_request.cpp  http_fixture.cpp  multi_request.cpp  request.cpp  response.cpp  test_util.hpp
src/test/util/: bsdl_uri.cpp
src/util/: addressed.hpp  bsdl_uri.cpp  bsdl_uri.hpp  cloudflare_hook.cpp  cloudflare_hook.hpp  cloudflare_hook.js  download_dialog.hpp  download_menu.hpp  platform.cpp  platform.hpp  string_similarity.cpp  string_similarity.hpp  with_map_range.hpp  with_range.hpp
